--- a/programas/CHRISTIAN/primos.html
+++ b/programas/CHRISTIAN/primos.html
@@ -14,7 +14,7 @@
 <body>
 	<header id="cabezera">
   	<div id="logo">
-  		<a href="../../Index.html" id="imagen_enlace"> <img src="../../image1.png" id="imagen_logo"> <img src="../../icono.png" id="imagen_icono"></a>
+  		<a href="../../index.html" id="imagen_enlace"> <img src="../../image1.png" id="imagen_logo"> <img src="../../icono.png" id="imagen_icono"></a>
   	</div>
   <a id="enlace_titulo" href="../../Index.html">
   	<h1 id="titulo">Programas En JavaScript</h1>
