--- a/programas/Enrique/potencia.html
+++ b/programas/Enrique/potencia.html
@@ -12,9 +12,9 @@
 	<body>
 		<header id="cabezera">
 			<div id="logo">
-			<a href="../../Index.html" id="imagen_enlace"> <img src="../../image1.png" id="imagen_logo"> <img src="../../icono.png" id="imagen_icono"></a>
+			<a href="../../index.html" id="imagen_enlace"> <img src="../../image1.png" id="imagen_logo"> <img src="../../icono.png" id="imagen_icono"></a>
 			</div>
-		<a id="enlace_titulo" href="../../Index.html">
+		<a id="enlace_titulo" href="../../index.html">
 			<h1 id="titulo">Programas En JavaScript</h1>
 		</a>
 		</header>
